# RustORFinder

./: Cargo.toml  README.md
.github/workflows/: release-build.yaml
benches/: finder_benchmark.rs
resources/codon_tables/: trans_table_11.json
resources/sequences/: NC_011604.1.fasta  NC_011604.1_normal.fasta
src/: lib.rs  main.rs
src/datahandler/: filehandler.rs  mask_file.rs  mod.rs  trans_table.rs
src/finder/: finder.rs  mod.rs  threaded_finder.rs
src/models/: models.rs
src/outwriter/: channel_writer.rs  count_writer.rs  gff_writer.rs  mod.rs  outwriter.rs
