[package]
edition = "2021"
name = "rustyorffinder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
crossbeam = "0.8"
crossbeam-utils = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "my_benchmark"
path = "benches/finder_benchmark.rs"
