[package]
edition = "2021"
name = "rustyorffinder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
clap = {version = "3.2", features = ["derive"]}
criterion = "0.3"
crossbeam = "0.8"
crossbeam-utils = "0.8"
env_logger = "0.9.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.2.1"

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
